--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "commit": "cz",
+    "prepare": "husky install",
+    "prettier:write": "prettier --write {libs,apps}/**/*.{ts,scss,html,json}",
+    "prettier:check": "prettier --check {libs,apps}/**/*.{ts,scss,html,json}"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +23,9 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ngrx/store": "^13.1.0",
     "@nrwl/angular": "13.9.6",
+    "commitizen": "^4.2.4",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -46,11 +52,17 @@
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "husky": "^7.0.4",
     "jest": "27.2.3",
     "jest-preset-angular": "11.1.1",
+    "lint-staged": "^12.3.7",
     "nx": "13.9.6",
-    "prettier": "^2.5.1",
+    "prettier": "2.6.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
