--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ngrx/effects": "^13.1.0",
+    "@ngrx/router-store": "^13.1.0",
     "@ngrx/store": "^13.1.0",
+    "@ngrx/store-devtools": "^13.1.0",
     "@nrwl/angular": "13.9.6",
     "commitizen": "^4.2.4",
     "rxjs": "~7.4.0",
