--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
       "@hhax/data-access-api": ["libs/data-access-api/src/index.ts"],
       "@hhax/feature-patient": ["libs/feature-patient/src/index.ts"],
       "@hhax/ui-components": ["libs/ui-components/src/index.ts"],
+      "@hhax/util-auth": ["libs/util-auth/src/index.ts"],
       "@hhax/util-env": ["libs/util-env/src/index.ts"],
       "@hhax/util-formatters": ["libs/util-formatters/src/index.ts"],
       "@hhax/util-ngrx": ["libs/util-ngrx/src/index.ts"],
