--- a/apps/mfa-e2e/.eslintrc.json
+++ b/apps/mfa-e2e/.eslintrc.json
@@ -4,6 +4,9 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+      "parserOptions": {
+        "project": ["apps/mfa-e2e/tsconfig.json"]
+      },
       "rules": {}
     }
   ]
