--- a/apps/mfa/.eslintrc.json
+++ b/apps/mfa/.eslintrc.json
@@ -5,6 +5,9 @@
     {
       "files": ["*.ts"],
       "extends": ["plugin:@nrwl/nx/angular", "plugin:@angular-eslint/template/process-inline-templates"],
+      "parserOptions": {
+        "project": ["apps/mfa/tsconfig.*?.json"]
+      },
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
