--- a/libs/data-access-api/.eslintrc.json
+++ b/libs/data-access-api/.eslintrc.json
@@ -4,29 +4,10 @@
   "overrides": [
     {
       "files": ["*.ts"],
-      "extends": ["plugin:@nrwl/nx/angular", "plugin:@angular-eslint/template/process-inline-templates"],
-      "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "type": "attribute",
-            "prefix": "hhax",
-            "style": "camelCase"
-          }
-        ],
-        "@angular-eslint/component-selector": [
-          "error",
-          {
-            "type": "element",
-            "prefix": "hhax",
-            "style": "kebab-case"
-          }
-        ]
-      }
-    },
-    {
-      "files": ["*.html"],
-      "extends": ["plugin:@nrwl/nx/angular-template"],
+      "parserOptions": {
+        "project": ["libs/data-access-api/tsconfig.*?.json"]
+      },
+      "extends": ["plugin:@nrwl/nx/angular"],
       "rules": {}
     }
   ]
