feat(api): added patient api integration example

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
   "editor.codeActionsOnSave": {
     "source.organizeImports": true
   },
-  "cSpell.words": ["hhax"]
+  "cSpell.words": ["agify", "hhax"]
 }
